<resources>
    <string name="app_name">BlogMVVM</string>
    <string name="edittext_post_title_hint">Enter title here</string>
    <string name="edittext_post_body_hint">Enter body here</string>
    <string name="empty_post_title">Empty post title</string>
    <string name="empty_post_body">Empty post body</string>
    <string name="post_added">Post successfully added</string>
    <string name="menu_item">Edit</string>
    <string name="post_updated">Post successfully updated</string>
    <string name="hint_email">Enter email here</string>
    <string name="hint_name">Enter name here</string>
    <string name="hint_comment_body">Enter comment here</string>
    <string name="empty_comment_body">Empty comment body</string>
    <string name="empty_email">Empty email</string>
    <string name="empty_name">Empty name</string>
    <string name="comment_added">Comment successfully added</string>
    <string name="create_password">Create your password</string>
    <string name="create_password_button">Create</string>
    <string name="password_hint">Enter pasword here</string>
    <string name="empty_password">Empty password</string>
    <string name="password_cleared">Master code. Password cleared</string>
    <string name="invalid_password">Invalid password</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password_button">Confirm</string>
</resources>
